--- a/backend/EvilCommunicatorInator/pom.xml
+++ b/backend/EvilCommunicatorInator/pom.xml
@@ -70,6 +70,11 @@
             <artifactId>mongodb-driver-sync</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.mindrot</groupId>
+            <artifactId>jbcrypt</artifactId>
+            <version>0.4</version>
+        </dependency>
         <!--
         <dependency>
             <groupId>org.springframework.boot</groupId>
